--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Dialogflow Messenger Integration -->
     <df-messenger
         intent="WELCOME"
-        chat-title="Chatbot Café"
+        chat-title="CaféBot"
         agent-id="f6073908-5c64-40d6-8629-5d145737a786"
         language-code="es">
     </df-messenger>
